# rp2040-keyboard-converter

./: .clang-format  .clang-tidy  .coderabbit.yaml  .env  .gitignore  .gitmessage  .gitmodules  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  update-mac.sh
src/: CMakeLists.txt  buzzer.c  buzzer.h  config.h  hid_interface.c  hid_interface.h  hid_keycodes.h  hid_keymaps.c  keymap.c  keymap.h  keymaps.c  keymaps.h  lock_leds.c  lock_leds.h  main.c  pcat_interface.c  pcat_interface.h  pcat_interface.pio  tusb_config.h  usb_descriptors.c  usb_descriptors.h
src/board_config/: keyboard_converter_board.h  pcat_converter_board.h
src/cmake_includes/: common.cmake  compile_flags.cmake  keyboard.cmake  mouse.cmake
src/common/lib/: buzzer.c  buzzer.h  command_mode.c  command_mode.h  config_storage.c  config_storage.h  flow_tracker.c  flow_tracker.h  hid_interface.c  hid_interface.h  hid_keycodes.h  keylayers.c  keylayers.h  keymaps.c  keymaps.h  led_helper.c  led_helper.h  log.c  log.h  numpad_flip.c  numpad_flip.h  pio_helper.c  pio_helper.h  ram_check.c  ram_check.h  ringbuf.c  ringbuf.h  tusb_config.h  types.h  uart.c  uart.h  usb_descriptors.c  usb_descriptors.h
src/keyboards/: README.md
src/keymaps/: keymaps.h
src/keymaps/6450225/: keymap.c
src/protocols/amiga/: README.md  keyboard_interface.c  keyboard_interface.h  keyboard_interface.pio
src/protocols/apple-m0110/: README.md  interface.pio  keyboard_interface.c  keyboard_interface.h  keyboard_interface.pio
src/protocols/at-ps2/: README.md  common_interface.c  common_interface.h  interface.pio  (+4 more)
(+164 files in other folders)
